Changelog
=========

0.3 (xxx-xx-xxxx)
-----------------

- fixed some default styles to work with
  webcouturier.dropdownmenu
  [cwainwright]

- increased z-indexes to avoid conflicts with add-on products like
  webcouturier.dropdownmenu and collective.easyslideshow
  [cwainwright]

- moved extra dtml variables to a new properties file, so that themes
  without all the variables won't error out
  [cwainwright]

- Fix up the resturctured text
  [claytron]

- set #portal-columns borders to collapse, to remove little bits of space
  [cwainwright] 

0.2 (Nov-22-2010)
-----------------

- fixed styles on livesearch
   * increased z-index for compatibility with webcouturier.dropdownmenu
   * removed white space from top for IE7
   * increased font size to base font

- moved the padding on personal tools to just the header, so if the login
  link is hidden, there won't still be a grey box
  [cwainwright]

- Added an uninstall profile
  [cwainwright]

0.1 (Aug-18-2010)
-----------------
- Initial release/creation of Plone Basic
  [cwainwright]