@@ -1,0 +1,91 @@
+/* <dtml-with base_properties>
+   <dtml-with plonebasic_properties> */
+   
+/* styles for elements entered in the visual editor
+   disable this file, or create a blank override
+   to clear the styles */
+
+#parent-fieldname-text p,
+#parent-fieldname-text dl {
+    margin-bottom: 1em;
+}
+#parent-fieldname-text a:target {
+    background-color: #ffb;
+}
+#parent-fieldname-text span.link-external a {
+    background: transparent url('link_icon.png') 0px 1px no-repeat;
+    padding: 1px 0px 1px 16px;
+}
+#parent-fieldname-text ul {
+    list-style-type: disc;
+    margin-left: 2em;
+}
+#parent-fieldname-text ol,
+.portlet ol {
+    list-style-type: decimal;
+    margin-left: 2em;
+}
+#parent-fieldname-text li,
+.portlet li {
+    margin-bottom: 0.25em;
+    line-height: 1.5em;
+    display: list-item;
+}
+#parent-fieldname-text dt {
+    font-weight: bold;
+    margin-bottom: 0;
+    margin-right: 0;
+}
+#parent-fieldname-text dd {
+    margin: 0 0 1em 2em;
+}
+#parent-fieldname-text pre {
+    background-color: #222;
+    color: #ffffff;
+    font-family: "Courier New", monospace;
+    padding: 1em;
+    overflow-x: auto;
+    font-size: 90%;
+    margin-bottom: 1em;
+    line-height: 1.25em;
+}
+#parent-fieldname-text pre.python {
+    background-color: #ffffff;
+}
+#parent-fieldname-text code {
+    font-family: "Courier New", monospace;
+}
+#parent-fieldname-text .discreet,
+#sidebar .discreet {
+    color: #666;
+    font-size: &dtml-fontSmallSize;;
+    font-weight: normal;
+}
+#parent-fieldname-text .visualHighlight {
+    background-color: #ffb;
+}
+#parent-fieldname-text .pullquote {
+    margin: 0 1em 0.5em 0.5em;
+    font-weight: bold;
+    line-height: 1.25em;
+    float: right;
+    width: 35%;
+    clear: right;
+    color: #444;
+    font-size: 1.6em;
+    letter-spacing: -0.08em;
+}
+#parent-fieldname-text .callout {
+    background: #eee;
+    padding: 1em;
+    border-left: 1em solid #ccc;
+    clear: both;
+}
+#parent-fieldname-text table {
+    text-align: left;
+    border-collapse: collapse;
+    border-spacing: 0px;
+    margin-bottom: 1em;
+}
+
+/* </dtml-with> </dtml-with> */
